--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,10 @@
 /java aplikacije/Podsistem3/podsistem1/nbproject/private/
 /java aplikacije/Podsistem3/podsistem2/nbproject/private/
 /java aplikacije/Podsistem3/podsistem3/nbproject/private/
+/java aplikacije/Podsistem3/podsistem1/build/
+/java aplikacije/Podsistem3/podsistem1/dist/
+/java aplikacije/Klijent/Klijent/target/
+/java aplikacije/Server/Server/target/
+/java aplikacije/Subsystem1/Subsystem1/nbproject/private/
+/java aplikacije/Subsystem2/Subsystem2/nbproject/private/
+/java aplikacije/Subsystem3/Subsystem3/nbproject/private/
