ispravno konfigurisan projekat - pokrecu se podsistemi

--- a/java_aplikacije/Subsystem1/Subsystem1/nbproject/project.properties
+++ b/java_aplikacije/Subsystem1/Subsystem1/nbproject/project.properties
@@ -26,6 +26,7 @@ dist.jar=${dist.dir}/${jar.name}
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.mysql-connector-j-8.0.31.jar=../../../../../../../../GlassFish_Server/glassfish/lib/mysql-connector-j-8.0.31.jar
 includes=**
 j2ee.appclient.mainclass.args=${j2ee.appclient.tool.args}
 j2ee.platform=8.0
@@ -40,7 +41,8 @@ jar.compress=false
 jar.name=Subsystem1.jar
 javac.classpath=\
     ${libs.eclipselink.classpath}:\
-    ${libs.javaee-api-8.0.classpath}
+    ${libs.javaee-api-8.0.classpath}:\
+    ${file.reference.mysql-connector-j-8.0.31.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
