--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,5 @@
 /java_aplikacije/Client/Client/target/
 /java_aplikacije/Subsystem2/Subsystem2/build/
 /java_aplikacije/Subsystem2/Subsystem2/dist/
+/java_aplikacije/Subsystem3/Subsystem3/build/
+/java_aplikacije/Subsystem3/Subsystem3/dist/
