--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,4 @@
 /java_aplikacije/Subsystem2/Subsystem2/dist/
 /java_aplikacije/Subsystem3/Subsystem3/build/
 /java_aplikacije/Subsystem3/Subsystem3/dist/
+/java_aplikacije/Server/target/
