Radi dohvatanje svih gradova u podsistemu 1

--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,5 @@
 /java_aplikacije/Subsystem3/Subsystem3/build/
 /java_aplikacije/Subsystem3/Subsystem3/dist/
 /java_aplikacije/Server/target/
+/java_aplikacije/Subsystem1/Subsystem1/build/
+/java_aplikacije/Subsystem1/Subsystem1/dist/
